--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "npm run build && node ./dist/src/index.js",
     "run:dev": "npx nodemon",
     "lint": "npx eslint src/**/*",
-    "lint:fix": "npx eslint ./src/**/* --fix"
+    "lint:fix": "npx eslint ./src/**/* --fix",
+    "initPostgreDBTable": "npm run build && node ./dist/src/database/postgreSQL/usersTableInitializer.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.17",
+    "@types/pg": "^8.6.6",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
@@ -34,7 +36,11 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "joi": "^17.7.0"
+    "joi": "^17.7.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0"
   }
 }
